--- a/index.html
+++ b/index.html
@@ -3,35 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Document</title>
-    <style>
-         .container{
-            display: block;
-            flex-wrap: wrap;
-            margin: 0 auto;
-            width: 80%;
-            background-color: rgb(255, 255, 255);
-         }
-         .block{
-            background-color: rgb(112, 112, 112);
-            height: 50px;
-            
-         }
-    </style>
 </head>
 <body >
     <div class="container"> 
     <div class="block">
-        <p>текст</p>
+        <p class="text">текст</p>
+        <img src="images/img.jpg" alt="">
     </div>
     <div class="block">
-        <p>текст</p>
+        <p class="text2">текст</p>
+        <img src="images/img.jpg" alt="">
     </div>
     <div class="block">
-        <p>текст</p>
+        <p class="text">текст</p>
+        <img src="images/img.jpg" alt="">
     </div>
-    <div class="block">
-        <p>текст</p>
+    <div class="block" style="padding-bottom: 40px;">
+        <p class="text2">текст</p>
+        <img src="images/img.jpg" alt="">
     </div>
     </div>
 </body>
